FIX: z-index fixed

--- a/docs/styles/main_page/hero.css
+++ b/docs/styles/main_page/hero.css
@@ -18,7 +18,7 @@ nav {
     font-weight: 300;
     position: fixed;
     top: 0;  
-    z-index: 100; 
+    z-index: 999; 
     background-color: transparent;
     
 }
